--- a/pages/2020/vanilla-webflow-form.mdx
+++ b/pages/2020/vanilla-webflow-form.mdx
@@ -6,7 +6,7 @@ publishedAt: "2020-03-29"
 image: "/images/25th/og.jpg"
 ---
 
-# Second-guessing the modern web
+# Second-guessing the modern web a really long title
 
 #### Most websites today are built like commercial products by professionals and marketers, optimised to draw the largest audience, generate engagement and 'convert'. But there is also a smaller, less-visible web designed by regular people to simply to share their interests and hobbies with the world. A web that is unpolished, often quirky but often also fun, creative and interesting.
 
