--- a/pages/2019/25th.mdx
+++ b/pages/2019/25th.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Christopher's 25th Birthday Party 🎂"
+title: "25th Birthday Party"
 description: "On Aug 24th Sat afternoon, let's catch up on Lantau."
 author: "Christopher Hugentobler"
 publishedAt: "2019-08-01"
@@ -7,7 +7,7 @@ image: "/images/25th/og.jpg"
 colour: "blue"
 ---
 
-# 25th Birthday Party
+# Christopher's 25th Birthday Party 🎂
 
 ## 🍺 🏖️🧞🌊<br/>I'm turning 25<br/>¼ of a century<br/>life moves pretty fast
 
