Improve blog post styling

--- a/pages/2020/vanilla-webflow-form.mdx
+++ b/pages/2020/vanilla-webflow-form.mdx
@@ -5,11 +5,12 @@ author: "Christopher Hugentobler"
 publishedAt: "2020-03-29"
 geo: "Taipei"
 image: "/images/25th/og.jpg"
+colour: "white"
 ---
 
 # Second-guessing the modern web a really long title
 
-### Most websites today are built like commercial products by professionals and marketers, optimised to draw the largest audience, generate engagement and 'convert'. But there is also a smaller, less-visible web designed by regular people to simply to share their interests and hobbies with the world. A web that is unpolished, often quirky but often also fun, creative and interesting.
+### But there is also a smaller, less-visible web designed by regular people to simply to share their interests and hobbies with the world. A web that is unpolished, often quirky but often also fun, creative and interesting.
 
 Yes, you can hook up a Webflow lead gen form to a back-end of your choice easily.
 
