--- a/pages/2020/thanks-snapask.mdx
+++ b/pages/2020/thanks-snapask.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Thank you Snapask"
-description: "On Aug 24th Sat afternoon, let's catch up on Lantau."
+description: "After four and a half years, I'm leaving Snapask, a company that I helped start. It's grown into something beyond our wildest dreams, so I wrote a thank you letter to the people who helped make it happen."
 author: "Christopher Hugentobler"
-publishedAt: "2020-08-28"
-image: "/images/25th/og.jpg"
+publishedAt: "2020-09-29"
+image: "/images/2020/thanks-snapask/og.jpg"
 colour: "white"
 ---
 
@@ -191,6 +191,79 @@ Thank you. Bon voyage!
 <Image
   alt="The Da'an one-bedroom studio - Aug '16"
   src="/images/2020/thanks-snapask/20.jpg"
+  h="800"
+  w="1200"
+  aspect
+/>
+
+<Caption>The Da'an one-bedroom studio - Feb '19</Caption>
+<Image
+  alt="The Da'an one-bedroom studio - Aug '16"
+  src="/images/2020/thanks-snapask/21.jpg"
+  h="800"
+  w="1200"
+  aspect
+/>
+
+<Caption>The Da'an one-bedroom studio - Mar '19</Caption>
+<Image
+  alt="The Da'an one-bedroom studio - Mar '16"
+  src="/images/2020/thanks-snapask/22.jpg"
+  h="1200"
+  w="1200"
+  aspect
+/>
+
+
+<Caption>The Da'an one-bedroom studio - May '19</Caption>
+<Image
+  alt="The Da'an one-bedroom studio - Mar '16"
+  src="/images/2020/thanks-snapask/23.jpg"
+  h="800"
+  w="1200"
+  aspect
+/>
+
+<Caption>The Da'an one-bedroom studio - Jun '19</Caption>
+<Image
+  alt="The Da'an one-bedroom studio - Mar '16"
+  src="/images/2020/thanks-snapask/24.jpg"
+  h="800"
+  w="1200"
+  aspect
+/>
+
+<Caption>The Da'an one-bedroom studio - Aug '19</Caption>
+<Image
+  alt="The Da'an one-bedroom studio - Mar '16"
+  src="/images/2020/thanks-snapask/25.jpg"
+  h="800"
+  w="1200"
+  aspect
+/>
+
+<Caption>The Da'an one-bedroom studio - Sep '20</Caption>
+<Image
+  alt="The Da'an one-bedroom studio - Mar '16"
+  src="/images/2020/thanks-snapask/26.jpg"
+  h="1200"
+  w="1200"
+  aspect
+/>
+
+<Caption>The Da'an one-bedroom studio - Sep '20</Caption>
+<Image
+  alt="The Da'an one-bedroom studio - Mar '16"
+  src="/images/2020/thanks-snapask/27.jpg"
+  h="800"
+  w="1200"
+  aspect
+/>
+
+<Caption>The Da'an one-bedroom studio - Sep '20</Caption>
+<Image
+  alt="The Da'an one-bedroom studio - Mar '16"
+  src="/images/2020/thanks-snapask/28.jpg"
   h="800"
   w="1200"
   aspect
