--- a/pages/2020/thanks-snapask.mdx
+++ b/pages/2020/thanks-snapask.mdx
@@ -15,9 +15,9 @@ The best thing about starting a company is the people you get to meet and work w
 
 Thank you. Bon voyage!
 
-<Caption>The first development team in our Kwun Tong office - Jan '16</Caption>
+<Caption>A diverse team from the start - Jan '16</Caption>
 <Image
-  alt="The first development team in our Kwun Tong office - Jan '16"
+  alt="A diverse team from the start - Jan '16"
   src="/images/2020/thanks-snapask/1.jpg"
   h="800"
   w="1200"
@@ -42,36 +42,36 @@ Thank you. Bon voyage!
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - May '16</Caption>
+<Caption>You have to love BBQ to work here - May '16</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="You have to love BBQ to work here - Mar '16"
   src="/images/2020/thanks-snapask/4.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - May '16</Caption>
+<Caption>Our 2nd Taipei office was a shoes-free space - May '16</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Our 2nd Taipei office was a shoes-free space - May '16"
   src="/images/2020/thanks-snapask/5.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Aug '16</Caption>
+<Caption>Years in Taipei and I still dislike karaoke - Aug '16</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Years in Taipei and I still dislike karaoke - Aug '16"
   src="/images/2020/thanks-snapask/6.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Aug '16</Caption>
+<Caption>Young and ambitious - Aug '16</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Young and ambitious - Aug '16"
   src="/images/2020/thanks-snapask/7.jpg"
   h="800"
   w="1200"
@@ -79,135 +79,135 @@ Thank you. Bon voyage!
 />
 
 
-<Caption>The Da'an one-bedroom studio - Aug '16</Caption>
+<Caption>Excited about booked revenue - Aug '16</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Excited about booked revenue - Aug '16"
   src="/images/2020/thanks-snapask/8.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Oct '16</Caption>
+<Caption>A housewarming with the team - Oct '16</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="A housewarming with the team - Oct '16"
   src="/images/2020/thanks-snapask/9.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Feb '17</Caption>
+<Caption>Standups sitting down - Jul '17</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Standups sitting down - Jul '17"
   src="/images/2020/thanks-snapask/10.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Jul '17</Caption>
+<Caption>Dress to impress - Jul '17</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Dress to impress - Jul '17"
   src="/images/2020/thanks-snapask/11.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Dec '17</Caption>
+<Caption>Lots of cab rides - Dec '17</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Lots of cab rides - Dec '17"
   src="/images/2020/thanks-snapask/12.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Dec '17</Caption>
+<Caption>Travelling for team-building - Dec '17</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Travelling for team-building - Dec '17"
   src="/images/2020/thanks-snapask/13.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Dec '17</Caption>
+<Caption>Secret Hitler reveals your true colours - Dec '17</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Secret Hitler reveals your true colours - Dec '17"
   src="/images/2020/thanks-snapask/14.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Apr '18</Caption>
+<Caption>Taipei became the destination for regional planning - Apr '18</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Taipei became the destination for regional planning - Apr '18"
   src="/images/2020/thanks-snapask/15.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Aug '18</Caption>
+<Caption>Building product is painful - Aug '18</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Aug '16"
+  alt="Building product is painful - Aug '18"
   src="/images/2020/thanks-snapask/16.jpg"
   h="1200"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Dec '18</Caption>
+<Caption>More and more experienced hires - Dec '18</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Aug '16"
+  alt="More and more experienced hires - Dec '18"
   src="/images/2020/thanks-snapask/17.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Dec '18</Caption>
+<Caption>Starting to look beyond the next 4 months - Dec '18</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Aug '16"
+  alt="Starting to look beyond the next 4 months - Dec '18"
   src="/images/2020/thanks-snapask/18.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Jan '19</Caption>
+<Caption>Outdoors energy - Jan '19</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Aug '16"
+  alt="Outdoors energy - Jan '19"
   src="/images/2020/thanks-snapask/19.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Jan '19</Caption>
+<Caption>Reward and recognition - Jan '19</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Aug '16"
+  alt="Reward and recognition - Jan '19"
   src="/images/2020/thanks-snapask/20.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Feb '19</Caption>
+<Caption>Not every day is sunny - Feb '19</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Aug '16"
+  alt="Not every day is sunny - Feb '19"
   src="/images/2020/thanks-snapask/21.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Mar '19</Caption>
+<Caption>Stand witness to each other's growth - Mar '19</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Stand witness to each other's growth - Mar '19"
   src="/images/2020/thanks-snapask/22.jpg"
   h="1200"
   w="1200"
@@ -215,54 +215,54 @@ Thank you. Bon voyage!
 />
 
 
-<Caption>The Da'an one-bedroom studio - May '19</Caption>
+<Caption>The office with the aquariums - May '19</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="The office with the aquariums - May '19"
   src="/images/2020/thanks-snapask/23.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Jun '19</Caption>
+<Caption>Generously sharing experiences - Jun '19</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Generously sharing experiences - Jun '19"
   src="/images/2020/thanks-snapask/24.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Aug '19</Caption>
+<Caption>Action and optimism - Aug '19</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Action and optimism - Aug '19"
   src="/images/2020/thanks-snapask/25.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Sep '20</Caption>
+<Caption>New friends - Sep '20</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="New friends - Sep '20"
   src="/images/2020/thanks-snapask/26.jpg"
   h="1200"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Sep '20</Caption>
+<Caption>Old friends - Sep '20</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Old friends - Sep '20"
   src="/images/2020/thanks-snapask/27.jpg"
   h="800"
   w="1200"
   aspect
 />
 
-<Caption>The Da'an one-bedroom studio - Sep '20</Caption>
+<Caption>Great teammates - Sep '20</Caption>
 <Image
-  alt="The Da'an one-bedroom studio - Mar '16"
+  alt="Great teammates - Sep '20"
   src="/images/2020/thanks-snapask/28.jpg"
   h="800"
   w="1200"
