Next 10 upgrade, fixed breaking changes

--- a/pages/2020/thanks-snapask.mdx
+++ b/pages/2020/thanks-snapask.mdx
@@ -5,6 +5,7 @@ author: "Christopher Hugentobler"
 publishedAt: "2020-09-29"
 image: "/images/2020/thanks-snapask/og.jpg"
 colour: "white"
+geo: "Taipei"
 ---
 
 # Thank you Snapask
