Implement next/image for blog

--- a/pages/2019/25th.mdx
+++ b/pages/2019/25th.mdx
@@ -17,12 +17,11 @@ colour: "blue"
 
 🇹🇼<br/>Aug 31th Sat from 7:00 to 10:00 p.m.<br/>At Basement Cafe Taipei
 
-<Image
+<Img
   alt="Christopher pointing up and smiling!"
-  src="/images/25th/main.jpg"
-  h="1599"
-  w="1200"
-  aspect
+  src="/images/25th/main-1200.jpg"
+  height="1599"
+  width="1200"
 />
 
 ## See you soon!
