--- a/pages/2020/thanks-snapask.mdx
+++ b/pages/2020/thanks-snapask.mdx
@@ -17,255 +17,227 @@ The best thing about starting a company is the people you get to meet and work w
 Thank you. Bon voyage!
 
 <Caption>A diverse team from the start - Jan '16</Caption>
-<Image
+<Img
   alt="A diverse team from the start - Jan '16"
-  src="/images/2020/thanks-snapask/1.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/1-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Hatching a plan - Mar '16</Caption>
-<Image
+<Img
   alt="Hatching a plan - Mar '16"
-  src="/images/2020/thanks-snapask/2.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/2-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>The Da'an one-bedroom studio - Mar '16</Caption>
-<Image
+<Img
   alt="The Da'an one-bedroom studio - Mar '16"
-  src="/images/2020/thanks-snapask/3.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/3-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>You have to love BBQ to work here - May '16</Caption>
-<Image
+<Img
   alt="You have to love BBQ to work here - Mar '16"
-  src="/images/2020/thanks-snapask/4.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/4-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Our 2nd Taipei office was a shoes-free space - May '16</Caption>
-<Image
+<Img
   alt="Our 2nd Taipei office was a shoes-free space - May '16"
-  src="/images/2020/thanks-snapask/5.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/5-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Years in Taipei and I still dislike karaoke - Aug '16</Caption>
-<Image
+<Img
   alt="Years in Taipei and I still dislike karaoke - Aug '16"
-  src="/images/2020/thanks-snapask/6.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/6-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Young and ambitious - Aug '16</Caption>
-<Image
+<Img
   alt="Young and ambitious - Aug '16"
-  src="/images/2020/thanks-snapask/7.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/7-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 
 <Caption>Excited about booked revenue - Aug '16</Caption>
-<Image
+<Img
   alt="Excited about booked revenue - Aug '16"
-  src="/images/2020/thanks-snapask/8.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/8-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>A housewarming with the team - Oct '16</Caption>
-<Image
+<Img
   alt="A housewarming with the team - Oct '16"
-  src="/images/2020/thanks-snapask/9.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/9-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Standups sitting down - Jul '17</Caption>
-<Image
+<Img
   alt="Standups sitting down - Jul '17"
-  src="/images/2020/thanks-snapask/10.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/10-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Dress to impress - Jul '17</Caption>
-<Image
+<Img
   alt="Dress to impress - Jul '17"
-  src="/images/2020/thanks-snapask/11.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/11-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Lots of cab rides - Dec '17</Caption>
-<Image
+<Img
   alt="Lots of cab rides - Dec '17"
-  src="/images/2020/thanks-snapask/12.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/12-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Travelling for team-building - Dec '17</Caption>
-<Image
+<Img
   alt="Travelling for team-building - Dec '17"
-  src="/images/2020/thanks-snapask/13.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/13-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Secret Hitler reveals your true colours - Dec '17</Caption>
-<Image
+<Img
   alt="Secret Hitler reveals your true colours - Dec '17"
-  src="/images/2020/thanks-snapask/14.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/14-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Taipei became the destination for regional planning - Apr '18</Caption>
-<Image
+<Img
   alt="Taipei became the destination for regional planning - Apr '18"
-  src="/images/2020/thanks-snapask/15.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/15-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Building product is painful - Aug '18</Caption>
-<Image
+<Img
   alt="Building product is painful - Aug '18"
-  src="/images/2020/thanks-snapask/16.jpg"
-  h="1200"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/16-1200.jpg"
+  height="1200"
+  width="1200"
 />
 
 <Caption>More and more experienced hires - Dec '18</Caption>
-<Image
+<Img
   alt="More and more experienced hires - Dec '18"
-  src="/images/2020/thanks-snapask/17.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/17-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Starting to look beyond the next 4 months - Dec '18</Caption>
-<Image
+<Img
   alt="Starting to look beyond the next 4 months - Dec '18"
-  src="/images/2020/thanks-snapask/18.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/18-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Outdoors energy - Jan '19</Caption>
-<Image
+<Img
   alt="Outdoors energy - Jan '19"
-  src="/images/2020/thanks-snapask/19.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/19-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Reward and recognition - Jan '19</Caption>
-<Image
+<Img
   alt="Reward and recognition - Jan '19"
-  src="/images/2020/thanks-snapask/20.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/20-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Not every day is sunny - Feb '19</Caption>
-<Image
+<Img
   alt="Not every day is sunny - Feb '19"
-  src="/images/2020/thanks-snapask/21.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/21-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Stand witness to each other's growth - Mar '19</Caption>
-<Image
+<Img
   alt="Stand witness to each other's growth - Mar '19"
-  src="/images/2020/thanks-snapask/22.jpg"
-  h="1200"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/22-1200.jpg"
+  height="1200"
+  width="1200"
 />
 
 
 <Caption>The office with the aquariums - May '19</Caption>
-<Image
+<Img
   alt="The office with the aquariums - May '19"
-  src="/images/2020/thanks-snapask/23.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/23-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Generously sharing experiences - Jun '19</Caption>
-<Image
+<Img
   alt="Generously sharing experiences - Jun '19"
-  src="/images/2020/thanks-snapask/24.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/24-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Action and optimism - Aug '19</Caption>
-<Image
+<Img
   alt="Action and optimism - Aug '19"
-  src="/images/2020/thanks-snapask/25.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/25-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>New friends - Sep '20</Caption>
-<Image
+<Img
   alt="New friends - Sep '20"
-  src="/images/2020/thanks-snapask/26.jpg"
-  h="1200"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/26-1200.jpg"
+  height="1200"
+  width="1200"
 />
 
 <Caption>Old friends - Sep '20</Caption>
-<Image
+<Img
   alt="Old friends - Sep '20"
-  src="/images/2020/thanks-snapask/27.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/27-1200.jpg"
+  height="800"
+  width="1200"
 />
 
 <Caption>Great teammates - Sep '20</Caption>
-<Image
+<Img
   alt="Great teammates - Sep '20"
-  src="/images/2020/thanks-snapask/28.jpg"
-  h="800"
-  w="1200"
-  aspect
+  src="/images/2020/thanks-snapask/28-1200.jpg"
+  height="800"
+  width="1200"
 />
