--- a/pages/2020/taiwan-surf-roadtrip.mdx
+++ b/pages/2020/taiwan-surf-roadtrip.mdx
@@ -12,6 +12,14 @@ geo: "Taipei"
 
 ### Surfvan - check. Surfboard - check. Surfmap - check. Finally found the time to do the Taiwan round-the-island roadtrip. Circled the island 3 times, covering nearly all highways, ate more than planned, and surfed less than expected. Enjoy the video and snapshots.
 
+<Caption>Sound on.</Caption>
+
+<Iframe>
+<iframe src="https://player.vimeo.com/video/485900440" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+</Iframe>
+
+<br/><br/><br/>
+
 First, let's talk about the van. I spent a month trying to rent a Westy. The plan was to live in the van for a month. I had to find a vehicle that could fit me, a 9 foot surfboard, and all my belongings.
 
 <Caption>Covered enough ground to circle Taiwan five times \ The Tropic of Cancer landmark</Caption>
